Added front page (and game.html is where the game is)

--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>javascriptvaders</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
+
 <body>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
-    <script src="main.js"></script>
+
+    <div class="container" style="text-align:center;">
+        <h1>Welcome to javascriptvaders</h1>
+
+        <hr>
+
+        <h3>Devices with mouse (or touchpad)</h3>
+        <p>Move your cursor left and right to move</p>
+        <p>Left click your mouse button to shoot</p>
+
+        <h3>Mobile Devices</h3>
+        <p>Tap to move to that spot and shoot at the same time</p>
+
+        <a class="btn btn-primary" href="./game.html">Click here to play the game</a>
+        <a class="btn btn-primary" href="https://github.com/renabil/javascriptvaders">Open Source Code Available</a>
+
+    </div>
 
 </body>
+
 </html>
