Fixed cursor not showing up

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 
-<body>
+<body style="cursor: initial;">
 
     <div class="container" style="text-align:center;">
         <h1>Welcome to javascriptvaders</h1>
